--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "i": "^0.3.7",
+    "mysql2": "^2.3.3",
     "npm": "^8.19.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
